--- a/package.json
+++ b/package.json
@@ -22,5 +22,22 @@
   "bugs": {
     "url": "https://github.com/RyanCCollins/functional-components/issues"
   },
-  "homepage": "https://github.com/RyanCCollins/functional-components#readme"
+  "homepage": "https://github.com/RyanCCollins/functional-components#readme",
+  "devDependencies": {
+    "babel-cli": "^6.5.1",
+    "babel-core": "^6.5.2",
+    "babel-eslint": "^5.0.0-beta9",
+    "babel-polyfill": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "eslint": "^3.10.1",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.7.1",
+    "flow-bin": "^0.35.0",
+    "remove-flow-types-loader": "0.0.1",
+    "webpack": "^2.1.0-beta.19"
+  }
 }
