--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "functional-components",
   "version": "0.0.0",
   "description": "React component primitives inspired by Functional Programming and Algabraic Data Types",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -23,10 +24,15 @@
     "url": "https://github.com/RyanCCollins/functional-components/issues"
   },
   "homepage": "https://github.com/RyanCCollins/functional-components#readme",
+  "dependencies": {
+    "react": "^15.3.2"
+  },
   "devDependencies": {
     "babel-cli": "^6.5.1",
     "babel-core": "^6.5.2",
     "babel-eslint": "^5.0.0-beta9",
+    "babel-loader": "^6.2.7",
+    "babel-plugin-flow-react-proptypes": "^0.17.2",
     "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
@@ -38,6 +44,6 @@
     "eslint-plugin-react": "^6.7.1",
     "flow-bin": "^0.35.0",
     "remove-flow-types-loader": "0.0.1",
-    "webpack": "^2.1.0-beta.19"
+    "webpack": "2.1.0-beta.19"
   }
 }
